--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
   --title-text-color: #000000;
 }
 
+.container {
+  margin: 0 auto;
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 body {
   color: var(--primary-text-color);
   background-color: var(--primary-bgc);
@@ -47,6 +54,8 @@ body {
   font-size: 14px;
   line-height: 1.06;
   list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 .nav-link {
@@ -72,8 +81,14 @@ body {
 
 .hero {
   background: var(--title-black);
+  text-align: center;
+
+  margin-top: 0px;
 }
 .hero-text {
+  margin-top: 0px;
+  margin-bottom: 30px;
+
   color: var(--primary-bgc);
   font-weight: 900;
   font-size: 44px;
@@ -85,9 +100,9 @@ body {
 .hero .hero-button {
   background-color: var(--accent-color);
   color: var(--primary-bgc);
-  display: flex;
+  display: inline-block;
   align-items: center;
-  text-align: center;
+
   letter-spacing: 0.06em;
   border-radius: 4px;
   font-weight: bold;
@@ -104,8 +119,19 @@ body {
 
 /* section */
 
+.feature-section {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .section,
 .feature {
+  margin: 0px;
+  padding: 0px;
+
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -115,6 +141,9 @@ body {
 }
 
 .feature-text {
+  margin: 0px;
+  padding: 0px;
+
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -136,16 +165,54 @@ body {
   list-style: none;
 }
 
+.img {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.img-t {
+  flex-basis: calc(100% / 3);
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 /*наша команда */
 
+.title {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 94px;
+  padding-bottom: 50px;
+}
+
 .team-info {
+  margin: 0px;
+  padding: 0px;
   background-color: var(--bgc-button);
 }
+
 .team-work {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
+  display: flex;
+}
+
+.team-card {
+  flex-basis: calc(100% / 4);
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-bottom: 94px;
 }
 
 .team-list {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 30px;
+
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -154,6 +221,10 @@ body {
 }
 
 .team-text {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 10px;
+  padding-bottom: 30px;
   color: var(--title-color);
   font-weight: normal;
   font-size: 16px;
@@ -161,13 +232,30 @@ body {
   letter-spacing: 0.03em;
 }
 
+/* Футер  */
+
 .footer {
   font-family: inherit;
   background-color: var(--title-black);
   font-size: 14px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.address {
+  margin: 0px;
+  padding: 0px;
+}
+
+.logo.log {
+  margin: 0px;
+  padding: 0px;
 }
 
 .footer-address {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 20px;
   color: var(--primary-bgc);
   text-decoration: none;
   line-height: 1.71;
@@ -175,9 +263,18 @@ body {
 }
 
 .footer-address-navigate {
+  margin: 0px;
+  padding: 0px;
+
   color: var(--secondary);
   text-decoration: none;
   font-style: normal;
+}
+
+.info-list.link {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 9px;
 }
 
 /* Портфолио */
