--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@
   --title-text-color: #000000;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   margin: 0 auto;
   width: 1230px;
@@ -119,18 +125,16 @@ body {
 
 /* section */
 
-.feature-section {
+.section {
   margin: 0px;
   padding: 0px;
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.section,
 .feature {
   margin: 0px;
   padding: 0px;
-
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
@@ -140,10 +144,19 @@ body {
   color: var(--primary-text-color);
 }
 
+.feature-section {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-basis: calc(100% / 4);
+
+  list-style: none;
+}
+
 .feature-text {
   margin: 0px;
   padding: 0px;
-
+  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -179,12 +192,17 @@ body {
   margin-right: 15px;
 }
 
+.item {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
 /*наша команда */
 
 .title {
   margin: 0px;
   padding: 0px;
-  padding-top: 94px;
+
   padding-bottom: 50px;
 }
 
@@ -202,16 +220,28 @@ body {
 }
 
 .team-card {
-  flex-basis: calc(100% / 4);
   margin-left: 15px;
   margin-right: 15px;
-  padding-bottom: 94px;
+  flex-basis: calc(100% / 4);
+}
+
+.team {
+  box-shadow: #757575;
+}
+
+.team-thumb {
+}
+
+.team-content {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  background-color: var(--button-bgc);
 }
 
 .team-list {
   margin: 0px;
   padding: 0px;
-  padding-top: 30px;
 
   color: var(--primary-text-color);
   font-weight: 500;
@@ -224,7 +254,7 @@ body {
   margin: 0px;
   padding: 0px;
   padding-top: 10px;
-  padding-bottom: 30px;
+
   color: var(--title-color);
   font-weight: normal;
   font-size: 16px;
@@ -299,6 +329,8 @@ body {
 }
 
 .portfolio-item-title {
+  margin: 0px;
+  padding: 0px;
   color: var(--primary-text-color);
   font-weight: bold;
   font-size: 18px;
@@ -306,6 +338,9 @@ body {
   letter-spacing: 0.06em;
 }
 .portfolio-item-text {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 4px;
   color: var(--title-color);
   font-weight: normal;
   font-size: 16px;
@@ -313,6 +348,39 @@ body {
   letter-spacing: 0.03em;
 }
 .list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
   text-decoration: none;
+}
+.filter.list {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+}
+.portfolio-item {
+  margin: 0px;
+  padding: 0px;
+  padding-top: 50px;
+  margin-left: 30px;
+  margin-top: 30px;
+  flex-basis: calc(100% / 3 -30px);
+}
+
+.portfolio {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+.portfolio-card {
+  box-shadow: #eeeeee;
+}
+
+.portfolio-content {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
