--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ body {
 
 .hero {
   margin-top: 0px;
-
+  padding: 200px 0;
   background: var(--title-black);
   text-align: center;
 }
@@ -132,13 +132,16 @@ body {
   text-transform: uppercase;
 }
 .hero .hero-button {
+  padding: 10px 32px;
   background-color: var(--accent-color);
   color: var(--primary-bgc);
   display: inline-block;
   align-items: center;
 
   letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -251,6 +254,9 @@ body {
   margin-left: 15px;
   margin-right: 15px;
   flex-basis: calc(100% / 4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team {
@@ -346,6 +352,9 @@ body {
   font-size: 16px;
   line-height: 1.62;
   border-radius: 4px;
+  border: none;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   background: var(--bgc-button);
   cursor: pointer;
   color: varvar(--accent-color);
@@ -394,6 +403,7 @@ body {
   padding-bottom: 20px;
   background-color: #ffffff;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
 .portfolio-item-title {
   margin: 0px;
