--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,13 @@ body {
 }
 
 /* шапка */
+.header {
+  border-bottom: 1px solid #ececec;
+}
 
 .main-nav {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 .nav-list,
 .info-list {
@@ -238,8 +240,6 @@ body {
 }
 
 .team-info {
-  margin: 0px;
-  padding: 0px;
   background-color: var(--bgc-button);
 }
 
@@ -296,15 +296,15 @@ body {
 /* Футер  */
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   font-family: inherit;
   background-color: var(--title-black);
   font-size: 14px;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .address {
-  margin: 0px;
+  margin: 20px;
   padding: 0px;
 }
 
@@ -316,7 +316,7 @@ body {
 .footer-address {
   margin: 0px;
   padding: 0px;
-  padding-top: 20px;
+
   color: var(--primary-bgc);
   text-decoration: none;
   line-height: 1.71;
@@ -335,7 +335,7 @@ body {
 .info-list.link {
   margin: 0px;
   padding: 0px;
-  padding-top: 9px;
+  margin-top: 9px;
 }
 
 /* Портфолио */
@@ -386,12 +386,18 @@ body {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .portfolio-item {
-  margin: 0px;
-  padding: 0px;
+  width: 370px;
+}
+
+.portfolio-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.portfolio-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
-  margin-left: 30px;
 }
 
 .portfolio-item .portfolio-card {
