--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@ img {
   width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
@@ -379,11 +381,14 @@ body {
   justify-content: center;
 }
 
+.portfolio {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .portfolio.list {
-  margin: 0px;
-  padding: 0px;
   padding-top: 50px;
-  list-style: none;
+
   display: flex;
   flex-wrap: wrap;
 }
